# tech-reader

./: .gitignore  .vscodeignore  CHANGELOG.md  Cargo.toml  DESIGN-REWRITE.md  LICENSE  NOTICE.md  PACKAGING.md  README.md  esbuild.cli.js  esbuild.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
examples/: demo.md
media/: reader.css  reader.js
packaging/: install.sh
packaging/homebrew/: tech-reader.rb
src/: audio.rs  blocks.rs  blocks.ts  cache.rs  diag.rs  extension.ts  highlight.rs  humanize.rs  log.ts  main.rs  narrate.rs  ollama.rs  segment.ts  sentence.rs  transport.rs  tts.rs  tui.rs  types.rs  types.ts  voices.rs  wav.rs
src/cli/: index.ts  lang.ts  player.ts  session.ts  tui.ts
src/engines/: piper.ts  say.ts
src/humanize/: humanizer.ts
src/narrate/: narrator.ts  prompts.ts
src/ollama/: client.ts
src/player/: playerPanel.ts
